--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -21,6 +21,7 @@
           <%# quantity isn't nested, unlike the rest %>
         </h2>
         <form action="/cart-delete-item" method="POST">
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <input type="hidden" value="<%= item.productId._id %>" name="idOfItemToBeDeleted">
           <%# make sure to pull the proper _id inside productId %>
           <button class="deletionButton" type="submit">Yeet this item</button>
@@ -31,10 +32,12 @@
     <hr>
     <div class="centered">
       <form action="/order-this-cart" method="POST">
-        <input type="hidden" value="<%= JSON.stringify(cartItems) %>" name="cartToOrder">
-        <%# JSON stringify the cart.items data to be used in postOrders. be careful
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+      </form>
+      <input type="hidden" value="<%= JSON.stringify(cartItems) %>" name="cartToOrder">
+      <%# JSON stringify the cart.items data to be used in postOrders. be careful
         that it will be necessary to also access nested properties in that %>
-        <button type="submit" class="btn">Order Now!</button>
+      <button type="submit" class="btn">Order Now!</button>
       </form>
     </div>
     <% } else { %>
