--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -24,6 +24,7 @@
         <label for="confirm-password">Confirm Password</label>
         <input type="password" name="passwordConfirmation" id="password">
       </div>
+      <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       <button class="btn" type="submit">Register</button>
     </form>
   </main>
