--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -41,6 +41,7 @@
     <%# This is a placeholder for a future button, if there is one %>
     <div class="centered">
       <form action="/order-this-cart" method="POST">
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         <button type="submit" class="btn">Order Now!</button>
       </form>
     </div>
